# fast_api

./: .coverage  README.md  app.py  database.db  mkdocs.yml  pyproject.toml  requirements.txt  schemas.py
docs/: index.md
documentation/: mkdocs.yml
fast_api/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fast_api/routers/: auth.py  todos.py  users.py
fast_api/routes/: auth.py
migrations/: env.py
migrations/versions/: 1fb26aa72888_create_todos_table.py  20f38a03c687_updated_field_updated_at_at_model_users.py  9846bb671c14_added_update_at_at_users.py  c910a742b88f_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
